# Lava-Gateway-LLM-Layer

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BUILD_PLAN.md  Dockerfile  Makefile  README.md  pyproject.toml  railway.json  requirements.txt
.claude/: launch.json
comptroller/: __init__.py  cli.py  config.py  demo.py  reporting.py
comptroller/agents/: __init__.py  agent_tools.py  base.py  categorization.py  dispute.py  fraud_triage.py  inputs.py  investigator.py  orchestrator.py  personas.py  policy.py  session.py  tieout.py  tools.py
comptroller/ai/: __init__.py  claude_client.py
comptroller/analytics/: __init__.py  ap.py  causal_runway.py  forecasting.py  registry.py  spend.py  underwriting.py
comptroller/api/: __init__.py  app.html  app.py  dashboard.html  landing.html  receipt.html
comptroller/data/: __init__.py  geo.py  synthetic.py
comptroller/documents/: __init__.py  invoices.py  receipts.py
comptroller/domain/: __init__.py  enums.py  (+2 more)
gateway/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
pitch/: align_brex.py  align_lava.py  apply_edits.py  brexify-pitch-final.pptx  brexify-pitch.pptx  deck_text.txt  deck_text_new.txt  edit_log.txt  final_text.txt  generate_dash.py  hebbia-original.pptx  runs.txt  runs269.txt
scripts/: demo.py  run_eval.py  train_fraud.py
tests/: conftest.py  test_agents.py  test_analytics.py  test_api.py  test_causal_runway.py  test_eval.py  test_exports.py  test_fraud.py  test_graph.py  test_personas.py  test_research.py  test_scorers.py  test_synthetic.py  test_workflows.py
(+99 files in other folders)
